completed about and contact webpages

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         <h1>Marcus Kelly</h1>
         <section>
-        <a class="link" href="#">About</a>
-        <a class="link" href="#">Portfolio</a>
-        <a class="link" href="#">Contact</a>
+        <a class="link" href="index.html">About</a>
+        <a class="link" href="portfolio.html">Portfolio</a>
+        <a class="link" href="contact.html">Contact</a>
         </section>
 
     </div>
