Completed All Files

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,36 @@
     </div>
 
 <div class="about">
+
     <h2 class="header">Portfolio</h2>
 
-    
-    
+    <div class="container">
+        <img class="img" src="assets/images/port-img.jpg">
+        <div class="imgtext">
+            <h3>Placeholder</h3>
+        </div>
+    </div>
+    <div class="container2">
+        <img class="img" src="assets/images/port-img2.jpg">
+        <div class="imgtext2">
+            <h3>Placeholder</h3>
+        </div>
+    </div>
+    <div class="container3">
+        <img class="img" src="assets/images/port-img.3.jpg">
+        <div class="imgtext3">
+            <h3>Placeholder</h3>
+        </div>
+    </div>
+    <div class="container4">
+        <img class="img" src="assets/images/port-img4.jpg">
+        <div class="imgtext4">
+            <h3>Placeholder</h3>
+        </div>
+    </div>
 </div>
+
+
 
 <footer></footer>
 
