--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     </div>
 
-<div class="about">
+<div class="about2">
     <h2 class="header">About Me</h2>
 
-    <img src="assets/download.png">
+    <img src="assets/images/download.png">
     <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique nulla aliquet enim tortor at auctor urna nunc.Maecenas pharetra convallis posuere morbi.     Ornare arcu dui vivamus arcu felis bibendum ut tristique. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est.     Habitant morbi tristique senectus et netus et malesuada fames. Eu ultrices vitae auctor eu augue ut lectus arcu bibendum.     Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Blandit aliquam etiam erat velit scelerisque in dictum non.Vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Dignissim cras tincidunt lobortis feugiat vivamus at augue eget arcu. Nisl purus in mollis nunc. Eu mi bibendum neque egestas congue quisque. Quisque egestas diam in arcu cursus.
-    
+    Hello I'm Marcus Kelly! I'm attending Vanderbilt University's coding bootcamp. I'm from Nashville, Tennessee, I love video games, computers, and sports.
+    I aim to be an app/web developer after graduating from Vanderbilt University's bootcamp.
     </p>
 </div>
 
